--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <p id="connect">
-  <a class="signin" href="#">Signin</a>
+  <a class="signin-fb" href="#">Signin</a>
   <a class="signout" href="#">Signout</a>
 </p>
