--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,7 +17,7 @@
   }(document));
 
   $(function() {
-    $('#connect .signin').click(function(e) {
+    $('#connect .signin-fb').click(function(e) {
       e.preventDefault();
 
       FB.login(function(response) {
