--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -22,13 +22,13 @@
 
       FB.login(function(response) {
         if (response.authResponse) {
-          $('#results').html('Connected! Hitting OmniAuth callback (GET users/auth/facebook/callback)...');
+          $('#header-alert-success').html('Connected! Hitting OmniAuth callback (GET users/auth/facebook/callback)...');
 
           // since we have cookies enabled, this request will allow omniauth to parse
           // out the auth code from the signed request in the fbsr_XXX cookie
           $.getJSON('/users/auth/facebook/callback', function(json) {
             if (json.success) {
-              $('#results').html(JSON.stringify(json));
+              $('#header-alert-success').html(JSON.stringify(json));
             } else {
               alert(JSON.stringify(json.message));
             }
@@ -42,12 +42,12 @@
       // These are the basic permissions that facebook allows without review
     });
 
-    $('#connect .signout').click(function(e) {
-      e.preventDefault();
-      $.getJSON('/auth/facebook/signout', function(json) {
-        $('#results').html(JSON.stringify(json));
-      });
-    });
+    // $('#connect .signout').click(function(e) {
+    //   e.preventDefault();
+    //   $.getJSON('/auth/facebook/signout', function(json) {
+    //     $('#header-alert-success').html(JSON.stringify(json));
+    //   });
+    // });
 
   });
 
