--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,6 +1,6 @@
 <% if notice %>
-  <p class="alert alert-success"><%= notice %></p>
+  <p id="header-alert-success" class="alert alert-success"><%= notice %></p>
 <% end %>
 <% if alert %>
-  <p class="alert alert-danger"><%= alert %></p>
+  <p id="header-alert-danger" class="alert alert-danger"><%= alert %></p>
 <% end %>
