--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ryde">
 <head>
   <title>Ryde</title>
+  <%= render 'layouts/meta' %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 
 <body>
   <%= render 'layouts/header' %>
-  <div class="container">
-    <%= render 'layouts/messages' %>
-    <%= yield %>
-    <%= render 'layouts/footer' %>
-  </div>
+  <%= render 'layouts/messages' %>
+  <%= yield %>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
