removed byebugs and fixed help email

--- a/app/views/help_mailer/help_email.html.erb
+++ b/app/views/help_mailer/help_email.html.erb
@@ -1,10 +1,13 @@
 <h1>Quick ryde user <%= @user.username %> needs help!!!!</h1>
 
 <h3>Help Category:</h3> 
-<p><%= @Category %></p>
+<p><%= @category %></p>
 
-<h3>Help sub-category:</h3> 
+<h3>Help Sub-category:</h3> 
 <p><%= @subcategory %></p>
+
+<h3>Help Message:</h3> 
+<p><%= @message %></p>
 
 <h3>User Info:</h3>
 <p>
