--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,11 +1,16 @@
 <h1>Admin Dashboard</h1>
 
-<table>
+
+<h2>Bikes</h2>
+<table class="table">
   <thead>
     <tr>
       <th>Bike ID</th>
       <th>Last User</th>
-      <th colspan="1">Combo</th>
+      <th>Current Status</th>
+      <th>Combo</th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -13,7 +18,8 @@
     <% @bikes.each do |bike| %>
       <tr>
         <td><%= bike.id %></td>
-        <td><%= bike.rides.order(stop_time: :desc).first.user.username %></td>
+        <td><%= bike.rides.order(stop_time: :desc).first.nil? ? "No rides yet" : bike.rides.order(stop_time: :desc).first.user.username %></td>
+        <td><%= bike.status %></td>
         <td><%= bike.code %></td>
         <td><%= link_to 'Edit', edit_bike_path(bike) %></td>
         <td><%= link_to 'Delete', bike, method: :delete, data: { confirm: 'Are you sure you want to delete this bike?' } %></td>
@@ -25,3 +31,26 @@
 <br>
 
 <%= link_to 'New Bike', new_bike_path %>
+
+<h2>Current Rides</h2>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Start Time</th>
+      <th>Duration</th>
+      <th>Bike ID</th>
+      <th>User</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @current_rides.each do |ride| %>
+      <tr>
+        <td><%= ride.start_time %></td>
+        <td><%= distance_of_time_in_words_to_now(ride.start_time, include_seconds: true) %></td>
+        <td><%= ride.bike.id %></td>
+        <td><%= ride.user.username %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
