added 10s scheduled email for testing

--- a/app/views/application_mailer/bikes_been_reserved_for.text.erb
+++ b/app/views/application_mailer/bikes_been_reserved_for.text.erb
@@ -1,8 +1,5 @@
-Quick! ryde user <%= @user.username %> needs help!!!!
+<%= @user.username %> has rented <%= @bike_id %> for <%= @minutes %>
 ====================================================
-
-Help Category: <%= @Category %>
-Help sub-category: <%= @subcategory %>
 
 User Info:
   Name: <%= @user.name %>
