--- a/app/views/help_mailer/help_email.html.erb
+++ b/app/views/help_mailer/help_email.html.erb
@@ -1,4 +1,4 @@
-<h1>Quick ryde user <%= @user.username %> needs help!!!!</h1>
+<h1>Quick! ryde user <%= @user.username %> needs help!!!!</h1>
 
 <h3>Help Category:</h3> 
 <p><%= @category %></p>
@@ -11,8 +11,8 @@
 
 <h3>User Info:</h3>
 <p>
-  Username: <%= @user.username %>
   Name: <%= @user.name %>
+  Username: <%= @user.username %>
   Email: <%= @user.email %>
 </p>
 
