made change to email to reflect what bike and minutes.

--- a/app/views/application_mailer/bikes_been_reserved_for.html.erb
+++ b/app/views/application_mailer/bikes_been_reserved_for.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @user.username %> has rented <%= @bike_id %> for <%= @minutes %></h1>
+<h1><%= @user.username %> has rented bike #<%= @bike_id %> for <%= @minutes %> minutes.</h1>
 
 <h3>User Info:</h3>
 <p>
