--- a/app/views/application_mailer/bikes_been_reserved_for.text.erb
+++ b/app/views/application_mailer/bikes_been_reserved_for.text.erb
@@ -1,4 +1,4 @@
-<%= @user.username %> has rented <%= @bike_id %> for <%= @minutes %>
+<%= @user.username %> has rented bike #<%= @bike_id %> for <%= @minutes %> minutes.
 ====================================================
 
 User Info:
